hachoir-parser 1.3.1
====================

XXX

hachoir-parser 1.3 (2010-01-20)
===============================

 * New parsers:

   - BLP: Blizzard Image
   - PRC: Palm resource

 * HachoirParserList() is no more a singleton:
   use HachoirParserList.getInstance() to get a singleton
 * Add tags optional argument to createParser(), it can be used for example to
   force a parser
 * Fix ParserList.print_(): first argument is now the title and not 'out'.
   If out is not specified, use sys.stdout.
 * MP3: support encapsulated objects (GEOB in ID3)
 * Create a dictionary: Windows codepage => charset name (CODEPAGE_CHARSET)
 * ASN.1: support boolean and enum types; fix bit string parser
 * MKV: use textHandler()
 * AVI: create index parser, use file size header to detect padding at the end
 * ISO9660: strip nul bytes in application name
 * JPEG: add ICC profile chunk name
 * PNG: fix transparency parser (tRNS)
 * BPLIST: support empty value for markers 4, 5 and 6
 * Microsoft Office summary: support more codepages (CP874, Windows 1250..1257)
 * tcpdump: support ICMPv6 and IPv6
 * Java: add bytecode parser, support JDK 1.6
 * Python: parse lnotab content, fill a string table for the references
 * MPEG Video: parse much more chunks
 * MOV: Parse file type header, create the right MIME type


hachoir-parser 1.2.1 (2008-10-16)
=================================

 * Improve OLE2 and MS Office parsers:
   - support small blocks
   - fix the charset of the summary properties
   - summary property integers are unsigned
   - use TimedeltaWin64 for the TotalEditingTime field
   - create minimum Word document parser
 * Python parser: support magic numbers of Python 3000
   with the keyword only arguments
 * Create Apple/NeXT Binary Property List (BPLIST) parser
 * MPEG audio: reject file with no valid frame nor ID3 header
 * Skip subfiles in JPEG files
 * Create Apple/NeXT Binary Property List (BPLIST) parser by Robert Xiao

hachoir-parser 1.2 (2008-09-03)